Fixed the rerender issue with the selection jumping to the remaining connections. It was occuring because key of the connection was set to the array index, since the indexes are repeating, the values of the selection of the connection were jumping to the remaining.

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,6 +82,15 @@
     width: 100%;
   }
 
+  .default-line {
+    stroke-width: 2;
+    stroke-color: oklch(90.1% 0.058 230.902)
+  }
+
+  .selected-line {
+    stroke-width: 10;
+    stroke-color: oklch(98.7% 0.026 102.212)
+  }
 
     .input-connection {
       position: absolute;
